--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -2,6 +2,13 @@
   margin: 0;
   padding: 0;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-transition-delay: 99999s;
+  -webkit-transition: color 99999s ease-out, background-color 99999s ease-out;
+}
 @font-face {
   font-family: "iconfont"; /* Project id 4095881 */
   src: url('//at.alicdn.com/t/c/font_4095881_mpqdmifee7j.woff2?t=1685459660067') format('woff2'),
