--- a/src/containers/Guide/style.scss
+++ b/src/containers/Guide/style.scss
@@ -13,7 +13,7 @@
     font-weight: regular;
     font-size: .2rem;
     line-height: .23rem;
-    letter-spacing: 0px;
+    letter-spacing: 0rem;
     text-align: center;
   }
   .sub-pic {
