--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -10,10 +10,10 @@ input:-webkit-autofill:active {
   -webkit-transition: color 99999s ease-out, background-color 99999s ease-out;
 }
 @font-face {
-  font-family: "iconfont"; /* Project id 4095881 */
-  src: url('//at.alicdn.com/t/c/font_4095881_mpqdmifee7j.woff2?t=1685459660067') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4095881_mpqdmifee7j.woff?t=1685459660067') format('woff'),
-       url('//at.alicdn.com/t/c/font_4095881_mpqdmifee7j.ttf?t=1685459660067') format('truetype');
+  font-family: 'iconfont';  /* Project id 4095881 */
+  src: url('//at.alicdn.com/t/c/font_4095881_q97nm5ceddg.woff2?t=1687680602841') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4095881_q97nm5ceddg.woff?t=1687680602841') format('woff'),
+       url('//at.alicdn.com/t/c/font_4095881_q97nm5ceddg.ttf?t=1687680602841') format('truetype');
 }
 .iconfont {
   font-family: "iconfont" !important;
