--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -1,4 +1,5 @@
 .home-page {
+  background: #F5F9FA;
   .banner {
     position: relative;
     height: 2.3rem;
@@ -51,6 +52,98 @@
         padding: 0 .1rem;
       }
     }
-    
+  }
+  .category {
+    position: relative;
+    margin-top: -.2rem;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: .12rem;
+    padding-bottom: .2rem;
+    background: #FFF;
+    border-radius: .2rem .2rem 0 0;
+    &-item {
+      flex: 0 0 25%;
+      text-align: center;
+      &-img {
+        margin-top: .16rem;
+        margin-bottom: .13rem;
+        width: .42rem;
+        height: .36rem;
+      }
+      &-desc {
+        color: #242424;
+        line-height: .18rem;
+        text-align: center;
+      }
+    }
+  }
+  .card {
+    margin-top: .1rem;
+    background: #FFF;
+    font-size: .12rem;
+    &-title {
+      position: relative;
+      padding: .14rem .1rem 0 .1rem;
+      color: #242424;
+      font-size: .2rem;
+      line-height: .24rem;
+      &-img {
+        float: left;
+        width: 24px;
+      }
+      &-more {
+        font-size: .16rem;
+        line-height: .18rem;
+        position: absolute;
+        bottom: 0;
+        right: .1rem;
+        font-weight: normal;
+        .iconfont {
+          font-size: .16rem;
+          margin-left: .04rem;
+        }
+      }
+    }
+    &-content {
+      overflow-x: scroll;
+      white-space: nowrap;
+      height: 1.82rem;
+      margin-top: .2rem;
+      padding-bottom: .14rem;
+      &-item {
+        margin-right: .06rem;
+        display: inline-block;
+        width: 1.1rem;
+        &-img {
+          width: 1.1rem;
+          height: 1.1rem;
+        }
+        &-desc {
+          margin: .06rem;
+          color: #242424;
+          font-size: .12rem;
+          line-height: .18rem;
+          white-space: normal;
+          word-break: break-all;
+        }
+        &-price {
+          position: relative;
+          margin: 0 .06rem;
+          color: #F81C00;
+          font-size: .2rem;
+          line-height: .24rem;
+          .iconfont {
+            position: absolute;
+            right: .06rem;
+            bottom: .02rem;
+            color: #73D13D;
+          }
+        }
+        &-yen {
+          font-size: .12rem;
+        }
+      }
+    }
   }
 }
