--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -1,4 +1,6 @@
 .home-page {
+  overflow-y: scroll;
+  padding-bottom: .5rem;
   background: #F5F9FA;
   .banner {
     position: relative;
@@ -56,6 +58,7 @@
   .category {
     position: relative;
     margin-top: -.2rem;
+    height: 1.92rem;
     display: flex;
     flex-wrap: wrap;
     font-size: .12rem;
@@ -79,6 +82,7 @@
     }
   }
   .card {
+    height: 2.6rem;
     margin-top: .1rem;
     background: #FFF;
     font-size: .12rem;
@@ -108,7 +112,6 @@
     &-content {
       overflow-x: scroll;
       white-space: nowrap;
-      height: 1.82rem;
       margin-top: .2rem;
       padding-bottom: .14rem;
       &-item {
@@ -120,6 +123,11 @@
           height: 1.1rem;
         }
         &-desc {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display:  -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 2;
           margin: .06rem;
           color: #242424;
           font-size: .12rem;
@@ -145,5 +153,35 @@
         }
       }
     }
+  }
+  .docker {
+    position: fixed;
+    left: 0;
+    right:0;
+    bottom:0;
+    z-index: 3;
+    height: .49rem;
+    display: flex;
+    background: #FFF;
+    border-top: .01rem solid #F5F9FA;
+    font-size: .12rem;
+    color: #B3C1C4;
+    text-align: center;
+    &-item {
+      flex: 1;
+      &-icon {
+        margin: .04rem 0;
+        font-size: .18rem;
+      }
+    }
+    &-item-active {
+      color: #73D13D;
+    }
+  }
+  .bottom {
+    line-height: 1rem;
+    color: #B3C1C4;
+    font-size: .12rem;
+    text-align: center;
   }
 }
