9.Add SearchList compoment

--- a/src/containers/Search/style.scss
+++ b/src/containers/Search/style.scss
@@ -22,6 +22,7 @@
       .search-icon {
         width: .3rem;
         text-align: center;
+        color: #75818F;
       }
       .search-input {
         flex: 1;
